# config_utils

./: .gitignore  README.md  manage.py  pyproject.toml
config_utils/: asgi.py  settings.py  urls.py  wsgi.py
editor/: urls.py  views.py
editor/templates/editor/: xml_editor.html  yaml_editor.html
