[project]
name = "config-utils"
version = "0.1.0"
description = ""
authors = [
    {name = "Duhncan",email = "duhncan.guy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "lxml (>=5.3.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
